# monty_hall_simulator

./: .gitignore  README.md  pyproject.toml
src/: main.py  simulation.py
